--- a/airwrite/templates/airwrite/index.html
+++ b/airwrite/templates/airwrite/index.html
@@ -63,29 +63,41 @@
                 <span>Comando de Voz</span>
             </div> {% endcomment %}
 
-            <div class="menu-item">
-                <div class="menu-icon">
-                    <svg viewBox="0 0 24 24" width="20" height="20">
-                        <path fill="currentColor" d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2S15.9 22 17 22s2-.9 2-2-.9-2-2-2zM7.82 14l.94-2h7.47c.75 0 1.41-.41 1.75-1.03l3.24-5.96-1.74-1-3.05 5.62H9.21l-.94-2H3v2h2l3.6 7.59-1.35 2.44C7.16 20.37 7 20.68 7 21c0 .55.45 1 1 1h12v-2H8.42c-.14 0-.25-.11-.25-.25l.03-.12L9.1 18h7.45c.75 0 1.41-.41 1.75-1.03l3.24-5.96-1.74-1-3.05 5.62H7.82z"/>
-                    </svg>
-                </div>
-                <span>Tienda</span>
-            </div>
 
-            <div class="menu-item">
-                <div class="menu-icon">
-                    <svg viewBox="0 0 24 24" width="20" height="20">
-                        <path fill="currentColor" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
-                    </svg>
-                </div>
-                <span>Favoritos</span>
-            </div>
+            <a href="{% url 'tienda' %}" style="text-decoration: none";>
+              <div class="menu-item">
+                  <div class="menu-icon">
+                      <svg viewBox="0 0 24 24" width="20" height="20">
+                          <path fill="currentColor" d="M7 18c-1.1 0-1.99.9-1.99 2S5.9 22 7 22s2-.9 2-2-.9-2-2-2zm10 0c-1.1 0-1.99.9-1.99 2S15.9 22 17 22s2-.9 2-2-.9-2-2-2zM7.82 14l.94-2h7.47c.75 0 1.41-.41 1.75-1.03l3.24-5.96-1.74-1-3.05 5.62H9.21l-.94-2H3v2h2l3.6 7.59-1.35 2.44C7.16 20.37 7 20.68 7 21c0 .55.45 1 1 1h12v-2H8.42c-.14 0-.25-.11-.25-.25l.03-.12L9.1 18h7.45c.75 0 1.41-.41 1.75-1.03l3.24-5.96-1.74-1-3.05 5.62H7.82z"/>
+                      </svg>
+                  </div>
+                  <span>Tienda</span>
+              </div>
+            </a>
+
+            <a href="{% url 'favorito' %}" style="text-decoration: none";>
+              <div class="menu-item">
+                  <div class="menu-icon">
+                      <svg viewBox="0 0 24 24" width="20" height="20">
+                          <path fill="currentColor" d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z"/>
+                        </svg>
+                      </div>
+                  <span>Favoritos</span>
+              </div>
+            </a>
 
 
             <div class="camera-preview">
-                <img src="{% url 'video_feed_cam' %}" alt="Vista previa de cámara">
+              <img src="{% url 'video_feed_cam' %}" alt="Vista previa de cámara">
             </div>
-
+            
+            <div class="xp-container">
+              <svg class="star-icon" width="32" height="32" viewBox="0 0 32 32" fill="none">
+                <path d="M16 2l4.12 8.36L29 11.76l-6.5 6.34 1.54 8.9L16 22.68 7.96 27l1.54-8.9L3 11.76l8.88-1.4L16 2z"
+                  fill="#FFD700" />
+              </svg>
+              <span class="xp-badge">{{ user.perfilusuario.xp }}Xp</span>
+            </div>
             {% comment %} <div class="action-buttons">
                 <button class="btn btn-primary">Escribir</button>
                 <button class="btn btn-secondary">Dibujar</button>
@@ -115,8 +127,13 @@
         <!-- Main Content -->
         <main class="main-content">
             <div class="canvas-container">
-                <img src="{% url 'video_feed_canvas' %}" alt="Canvas de procesamiento" class="canvas-feed">
+              {% if letra_id %}
+              <img src="{% url 'video_feed_canvas' letra_id %}" alt="Canvas de procesamiento" class="canvas-feed">
+              {% else %}
+                  <p>Selecciona una letra para comenzar a dibujar</p>
+              {% endif %}
             </div>
+
 
             <div class="toolbar">
                 {% comment %} <button class="tool-btn" title="Guardar">
@@ -125,9 +142,9 @@
                         
 
                 <div class="tool-dropdown">
-                    <button id="colorButton" class="tool-btn" title="Color">
-                        <span class="material-icons">format_color_fill</span>
-                    </button>
+                  <button id="colorButton" class="tool-btn" title="Color">
+                    <span class="material-icons">format_color_fill</span>
+                  </button>
                     <div id="colorMenu" class="dropup-menu">
                         <button class="color-option color-amarillo" data-color="amarillo" title="Amarillo"></button>
                         <button class="color-option color-rosa" data-color="rosa" title="Rosa"></button>
@@ -137,12 +154,12 @@
                 </div>
 
                 <div class="tool-dropdown">
-                    <button id="grosorButton" class="tool-btn" title="Editar Grosor">
-                        <span class="material-icons">edit</span>
+                  <button id="grosorButton" class="tool-btn" title="Editar Grosor">
+                    <span class="material-icons">edit</span>
                     </button>
                     <div id="grosorMenu" class="dropup-menu">
                         <button class="grosor-option" data-grosor="peque" title="Peque">
-                            <span class="grosor-circle peque"></span>
+                          <span class="grosor-circle peque"></span>
                         </button>
                         <button class="grosor-option" data-grosor="medio" title="Medio">
                             <span class="grosor-circle medio"></span>
