--- a/airwrite/templates/airwrite/modules/silaba.html
+++ b/airwrite/templates/airwrite/modules/silaba.html
@@ -59,6 +59,13 @@
     </section>
   </main>
 
+  <!-- Pasar datos del contexto Django a JavaScript -->
+  {{ modules|json_script:"modules-data" }}
+
+  <!-- SweetAlert2 -->
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+  <!-- Script principal -->
   <script src="{% static 'airwrite/js/silaba.js' %}"></script>
 </body>
 </html>
