--- a/airwrite/static/airwrite/css/silaba.css
+++ b/airwrite/static/airwrite/css/silaba.css
@@ -172,11 +172,19 @@ a.cart-container {
   filter: grayscale(100%);
 }
 
+.letter-display.blocked {
+  position: relative;
+  background-color: rgba(200, 200, 200, 0.6); /* gris semitransparente */
+  filter: grayscale(100%);
+}
+
 .blocked-icon {
   position: absolute;
-  top: 10px;
-  right: 10px;
-  background: rgba(0, 0, 0, 0.7);
+  display: none !important;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); /* centrar */
+  background: rgba(0, 0, 0, 0.6);
   border-radius: 50%;
   padding: 8px;
   z-index: 20;
@@ -184,7 +192,10 @@ a.cart-container {
 
 .blocked-icon svg {
   color: white;
+  width: 24px;
+  height: 24px;
 }
+
 
 .letter-bg {
   position: absolute;
