FUNCION DE START Y STOP EN TRAZOS

--- a/airwrite/templates/airwrite/index.html
+++ b/airwrite/templates/airwrite/index.html
@@ -13,7 +13,8 @@
   window.urls = {
     clear_canvas: "{% url 'clear_canvas' %}",
     set_color: "{% url 'set_color' %}",
-    set_grosor: "{% url 'set_grosor' %}"
+    set_grosor: "{% url 'set_grosor' %}",
+    toggle_drawing: "{% url 'toggle_drawing' %}"
   };
     </script>
     <script src="{% static 'airwrite/js/index.js' %}" defer></script>
