--- a/airwrite/static/airwrite/css/home.css
+++ b/airwrite/static/airwrite/css/home.css
@@ -285,20 +285,25 @@ body {
 }
 
 .video-container {
-  width: 100%;
-  height: 340px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #000;
   border-radius: 20px;
   overflow: hidden;
-  background: #000;
-  position: relative;
   box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+  /* height: 340px; */ /* Altura fija para la sección de video */
 }
 
 .main-video {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
+  transform: scale(1.02); /* Ajusta el zoom aquí */
+  transform-origin: center;
+
 }
+
 
 /* ========== COURSE PLANNING SECTION ========== */
 .course-planning-section {
