--- a/airwrite/templates/airwrite/home/home.html
+++ b/airwrite/templates/airwrite/home/home.html
@@ -129,7 +129,7 @@
       <section class="video-section">
         <div class="video-container">
           <video class="main-video" controls autoplay muted loop>
-            <source src="{% static 'airwrite/img/demovideo.mp4' %}" type="video/mp4">
+            <source src="{% static 'airwrite/img/VideoOficialDemo.mp4' %}" type="video/mp4">
             Tu navegador no soporta el elemento video.
           </video>
         </div>
