Arreglando calidad del lienzo V2

--- a/airwrite/templates/airwrite/index.html
+++ b/airwrite/templates/airwrite/index.html
@@ -155,7 +155,7 @@
                     <span class="material-icons">format_color_fill</span>
                   </button>
                     <div id="colorMenu" class="dropup-menu">
-                        <button class="color-option color-amarillo" data-color="amarillo" title="Amarillo"></button>
+                        <button class="color-option color-amarillo" data-color="amarillo" title="Rojo"></button>
                         <button class="color-option color-rosa" data-color="rosa" title="Rosa"></button>
                         <button class="color-option color-verde" data-color="verde" title="Verde"></button>
                         <button class="color-option color-celeste" data-color="celeste" title="Celeste"></button>
