CAMBIOS LOGIN Y ALERTAS FUNCIONALES

--- a/airwrite/templates/airwrite/auth/login.html
+++ b/airwrite/templates/airwrite/auth/login.html
@@ -24,9 +24,13 @@
           <!-- Logo y título mejorados -->
           <div class="auth-header">
             <div class="auth-logo">
-              <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
-                <path d="M16 2L8 8V18C8 21.54 11.42 24.16 16 24.5C20.58 24.16 24 21.54 24 18V8L16 2Z" fill="white"/>
-              </svg>
+            <svg width="48" height="48" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+  <g transform="translate(0,0)" fill="#FFFFFF">
+    <path d="M3 17.25V21H6.75L17.81 9.94L14.06 6.19L3 17.25Z"/>
+    <path d="M20.71 7.04C21.1 6.65 21.1 6 20.71 5.62L18.37 3.29C17.98 2.9 17.33 2.9 16.95 3.29L15.13 5.1L18.88 8.85L20.71 7.04Z"/>
+  </g>
+</svg>
+
             </div>
             <h1>Bienvenido a AirWrite</h1>
             <p>Inicia sesión para comenzar tu aprendizaje</p>
