Arreglando bugs en tienda y lienzo

--- a/airwrite/templates/airwrite/tiendaXp/tiendaXp.html
+++ b/airwrite/templates/airwrite/tiendaXp/tiendaXp.html
@@ -122,6 +122,7 @@
   <!-- Pasar datos del contexto Django a JavaScript -->
   {{ modules|json_script:"modules-data" }}
   {{ compradas|json_script:"compradas-data" }}
+  {{ desbloqueadas|json_script:"desbloqueadas-data" }}
   
 
 
