--- a/airwrite/templates/airwrite/modules/favorito.html
+++ b/airwrite/templates/airwrite/modules/favorito.html
@@ -35,6 +35,15 @@
       </svg>
       <span class="cart-text">Tienda</span>
     </a>
+
+    <a href="{% url 'home' %}" class="cart-container">
+            <svg class="cart-icon" width="24" height="24" viewBox="0 0 24 24" fill="none">
+                <path d="M19 12H5M12 19l-7-7 7-7" stroke="#3B9EFF" stroke-width="2" stroke-linecap="round"
+                    stroke-linejoin="round" />
+            </svg>
+
+            <span class="cart-text">Regresar</span>
+        </a>
   </header>
 
   <!-- Main Content -->
