--- a/airwrite/templates/airwrite/home/home.html
+++ b/airwrite/templates/airwrite/home/home.html
@@ -161,8 +161,8 @@
         <h2 class="section-title">Estadísticas</h2>
         <div class="statistics-grid">
           <div class="stat-card">
-            <div class="stat-label">Cursos<br />Completados</div>
-            <div class="stat-value">{{ module|length }}</div>
+            <div class="stat-label">Letras<br />Practicadas</div>
+            <div class="stat-value">{{ practicadas|length }}</div>
             <div class="stat-bar"></div>
           </div>
 
@@ -179,8 +179,8 @@
           </div>
 
           <div class="stat-card">
-            <div class="stat-label">Niveles<br />Finalizados</div>
-            <div class="stat-value">{{ module|length }}</div>
+            <div class="stat-label">Letras<br />compradas</div>
+            <div class="stat-value">{{ compradas|length }}</div>
             <div class="stat-bar"></div>
           </div>
         </div>
